# snake

./: README.md  snake.cabal
app/: Main.hs  Snake.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
