cabal-version:      2.4
name:               snake
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Oliver Schwartz
maintainer:         ollieschwartz99@gmail.com

-- A copyright notice.
-- copyright:
category:           Game
extra-source-files: CHANGELOG.md

executable snake
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules:    Snake

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.14.3.0, ansi-terminal, time, random
    hs-source-dirs:   app
    default-language: Haskell2010
